--- a/css/main.css
+++ b/css/main.css
@@ -527,6 +527,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: grid;
 }
 
+.w-5\/6 {
+  width: 83.333333%;
+}
+
 .w-full {
   width: 100%;
 }
@@ -545,6 +549,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .self-center {
   align-self: center;
+}
+
+.rounded-none {
+  border-radius: 0px;
 }
 
 .border-2 {
