--- a/css/main.css
+++ b/css/main.css
@@ -636,11 +636,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(96 165 250 / var(--tw-text-opacity));
 }
 
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
 .text-green-400 {
   --tw-text-opacity: 1;
   color: rgb(74 222 128 / var(--tw-text-opacity));
@@ -654,6 +649,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.placeholder\:opacity-10::-moz-placeholder {
+  opacity: 0.1;
+}
+
+.placeholder\:opacity-10:-ms-input-placeholder {
+  opacity: 0.1;
+}
+
+.placeholder\:opacity-10::placeholder {
+  opacity: 0.1;
 }
 
 .focus\:outline-none:focus {
@@ -670,11 +677,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .dark\:text-gray-100 {
     --tw-text-opacity: 1;
     color: rgb(243 244 246 / var(--tw-text-opacity));
-  }
-
-  .dark\:text-gray-300 {
-    --tw-text-opacity: 1;
-    color: rgb(209 213 219 / var(--tw-text-opacity));
   }
 
   .dark\:placeholder\:text-gray-600::-moz-placeholder {
